--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "flowbite": "^2.1.1",
+    "query-string": "^9.0.0",
     "tailwindcss": "^3.3.6",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
