--- a/Client/package.json
+++ b/Client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
+    "server": "vite --host",
     "build": "vite build",
     "preview": "vite preview"
   },
